[Isolated Regions] [Test] Fixed cluster configuration used in 'test:scheduler_plugin_integration'. In particular, we removed the failing Jinja conditions related to US isolated regions. This is a fair short term solution because scheduler plugin is not supported in US isolated regions.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
@@ -24,9 +24,9 @@
       RootVolume:
         Encrypted: true
         Size: null
-        VolumeType: {% if "-iso" in region %}gp2{% else %}gp3{% endif %}
-        Throughput: {% if "-iso" in region %}null{% else %}125{% endif %}
-        Iops: {% if "-iso" in region %}null{% else %}3000{% endif %}
+        VolumeType: gp3
+        Throughput: 125
+        Iops: 3000
   CustomActions: null
   CustomSettings: null
   Iam:
