--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_x86_64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_x86_64.yaml
@@ -24,9 +24,9 @@
       RootVolume:
         Encrypted: true
         Size: null
-        VolumeType: {% if "-iso" in region %}gp2{% else %}gp3{% endif %}
-        Throughput: {% if "-iso" in region %}null{% else %}125{% endif %}
-        Iops: {% if "-iso" in region %}null{% else %}3000{% endif %}
+        VolumeType: gp3
+        Throughput: 125
+        Iops: 3000
   CustomActions: null
   CustomSettings: null
   Iam:
