[Isolated Regions] [Test] Update test config for US isolated regions by removing tests of unsupported features and using the expected instance type where necessary.
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/configs/isolated_regions.yaml
+++ b/tests/integration-tests/configs/isolated_regions.yaml
@@ -59,12 +59,14 @@ test-suites:
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-    test_pcluster_configure.py::test_pcluster_configure_avoid_bad_subnets:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because its logic is us-east-1 specific.
+#    test_pcluster_configure.py::test_pcluster_configure_avoid_bad_subnets:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
     test_pcluster_configure.py::test_region_without_t2micro:
       dimensions:
         - regions: {{ REGIONS }}
@@ -83,18 +85,24 @@ test-suites:
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
   create:
-    test_create.py::test_create_wrong_os:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
-    test_create.py::test_create_wrong_pcluster_version:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because it relies on having AMIs for different OS in the region
+# and this is not the case in these regions.
+#    test_create.py::test_create_wrong_os:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because it relies on having AMIs for different pcluster versions in the region
+# and this is not the case in these regions.
+#    test_create.py::test_create_wrong_pcluster_version:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
     test_create.py::test_create_imds_secured:
       dimensions:
         - regions: {{ REGIONS }}
@@ -150,15 +158,19 @@ test-suites:
     test_efa.py::test_efa:
       dimensions:
         - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
+          instances: ["c5n.18xlarge"]
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-    test_fabric.py::test_fabric:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because its logic relies on downloading an external
+# dependency from GitHub, which is not possible
+# from within an air-gaped region.
+#    test_fabric.py::test_fabric:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: [ "p4d.24xlarge" ]
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
   iam:
     test_iam.py::test_iam_policies:
       dimensions:
@@ -188,13 +200,16 @@ test-suites:
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-  intel_hpc:
-    test_intel_hpc.py::test_intel_hpc:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because it requires Centos7 clusters, but we currently support
+# only Amazon Linux 2 in US isolated regions.
+#  intel_hpc:
+#    test_intel_hpc.py::test_intel_hpc:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
   networking:
     test_cluster_networking.py::test_cluster_in_private_subnet:
       dimensions:
@@ -248,13 +263,15 @@ test-suites:
       dimensions:
         - regions: {{ REGIONS }}
           oss: {{ OSS }}
-  pcluster_api:
-    test_api.py::test_cluster_slurm:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because ParallelCluster API is not supported in these regions.
+#  pcluster_api:
+#    test_api.py::test_cluster_slurm:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
   resource_bucket:
     test_resource_bucket.py::test_resource_bucket:
       dimensions:
@@ -360,31 +377,36 @@ test-suites:
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-    test_slurm_accounting.py::test_slurm_accounting:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
-    test_slurm_accounting.py::test_slurm_accounting_disabled_to_enabled_update:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# These tests cannot be executed in US isolated regions
+# because Slurm Accounting requires Secrets Manager,
+# which is not supported in these regions.
+#    test_slurm_accounting.py::test_slurm_accounting:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
+#    test_slurm_accounting.py::test_slurm_accounting_disabled_to_enabled_update:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
     test_slurm.py::test_slurm_reconfigure_race_condition:
       dimensions:
         - regions: {{ REGIONS }}
           instances: {{ INSTANCES }}
           oss: {{ OSS }}
           schedulers: {{ SCHEDULERS }}
-  spot:
-    test_spot.py::test_spot_default:
-      dimensions:
-        - regions: {{ REGIONS }}
-          instances: {{ INSTANCES }}
-          oss: {{ OSS }}
-          schedulers: {{ SCHEDULERS }}
+# This test cannot be executed in US isolated regions
+# because Spot instances are not supported in these regions.
+#  spot:
+#    test_spot.py::test_spot_default:
+#      dimensions:
+#        - regions: {{ REGIONS }}
+#          instances: {{ INSTANCES }}
+#          oss: {{ OSS }}
+#          schedulers: {{ SCHEDULERS }}
   storage:
     test_efs.py::test_efs_compute_az:
       dimensions:
